<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    tools:context=".FinishTestActivity">

    <TextView
        android:id="@+id/FinishTestText"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="25dp"
        android:text="@string/FinishTestLayout"
        android:textAlignment="center"
        android:textColor="@color/we"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ImageFinishSuccses"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/finishico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FinishTestText" />

    <TextView
        android:id="@+id/FinishName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ImageFinishSuccses"
        app:layout_constraintEnd_toEndOf="@+id/ImageFinishSuccses"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/ImageFinishSuccses"
        app:layout_constraintTop_toTopOf="@+id/ImageFinishSuccses"
        app:layout_constraintVertical_bias="0.309" />

    <ImageView
        android:id="@+id/LogoLayouteFinishTest"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_marginTop="420dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextFinishScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FinishScore"
        android:textColor="@color/we"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageFinishSuccses" />


    <TextView
        android:id="@+id/butBackListenLayout"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="FinishGoBack"
        android:text="@string/FinishGoBack"
        android:textAllCaps="false"
        android:textColor="@color/we"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoLayouteFinishTest" />


</androidx.constraintlayout.widget.ConstraintLayout>